# maple

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Matrix.h  OnePole.h  Oscillator.h  TwoPoles.h  WavFile.h  algorithms.h  algorithms.html  fourier.h  maple.cpp  mptypes.cpp  params.txt  utils.h
work/: incomplete.h
